--- a/v1/projects/fuelgauge/src/style.scss
+++ b/v1/projects/fuelgauge/src/style.scss
@@ -13,7 +13,7 @@ $bg: #192021;
 
 //Page setup
 body {
-  background: $bg url(https://goo.gl/46Q9wn) no-repeat center center fixed;
+  background: $bg url('../static/mountain.jpg') no-repeat center center fixed;
   background-size: cover;
   font-family: 'Roboto';
   height: 100vh;
