--- a/v0/resources/style.css
+++ b/v0/resources/style.css
@@ -87,7 +87,7 @@ body {
   transform: translateY(-50%);
   max-height: 100%;
   max-width: 100%;
-  filter: grayscale(100%) invert(100%);
+  /* filter: grayscale(100%) invert(100%); */
 }
 #portfolio small {
   font-style: italic;
