--- a/catch-of-the-day/src/css/style.css
+++ b/catch-of-the-day/src/css/style.css
@@ -224,7 +224,7 @@ html {
   font-size: 62.5%;
 }
 body {
-  background: #d4d4d4;
+  background: #f5a623;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Open Sans', sans-serif;
