--- a/v1/projects/fuelgauge/style.css
+++ b/v1/projects/fuelgauge/style.css
@@ -15,7 +15,7 @@
   }
 }
 body {
-  background: #192021 url('../static/mountain.jpg') no-repeat center center fixed;
+  background: #192021 url('./static/mountain.jpg') no-repeat center center fixed;
   background-size: cover;
   font-family: "Roboto";
   height: 100vh;
