--- a/delicious/views/store.pug
+++ b/delicious/views/store.pug
@@ -10,7 +10,7 @@ block content
       h2.title.title--single
         a(href=`/stores/${store.slug}`) #{store.name}
   .single__details.inner
-    img.single__map(src=h.staticMap(store.location.coordinates))
+    img.single__map(src='/images/map.png')
     p.single__location= store.location.address
     p= store.description
     
