--- a/v1/blog/index.liquid
+++ b/v1/blog/index.liquid
@@ -1,7 +1,3 @@
-<!-- <?php
-  require_once '../../etc/classes/DB.php';
-  require_once '../../etc/classes/Article.php';
-?> -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -117,7 +113,6 @@
 
   <body>
     <!--NAVIGATION-->
-    <!--NAVIGATION-->
     <nav>
       <ul>
         <li id="logo">
@@ -144,43 +139,6 @@
         </div>
       </ul>
     </nav>
-
-    <?php
-      if (isset($_GET['viewArticle'])) {
-          $title = $_GET['viewArticle'];
-          $article_data = DB::getArticleData($title);
-          if (!$article_data) header('Location: .');
-          $blog_post = new Article($article_data);
-    ?>
-    <!--TITLE SECTION-->
-    <div class="section dark" id="post-head">
-      <div class="content">
-        <div id="post-quote"><?php echo $article_data['quote']; ?></div>
-      </div>
-    </div>
-
-    <!--RETURN SECTION-->
-    <a class="text-small light" id="page-return" href="."
-      ><i class="fas fa-arrow-left"></i> Back to Archive</a
-    >
-
-    <!--POST SECTION-->
-    <div class="section" id="post-content">
-      <div class="content light">
-        <div id="post-share">
-          <?php
-
-            $blog_post->createShareLinks (); ?>
-        </div>
-        <?php
-
-          $blog_post->viewArticle (); ?>
-      </div>
-    </div>
-
-    <?php
-      } else {
-    ?>
     <!--TITLE SECTION-->
     <div class="section dark" id="head">
       <div class="content">
@@ -195,20 +153,29 @@
       <button class="btn-tag">personal</button>
       <button class="btn-tag">technology</button>
       <button class="btn-tag">coding</button>
-      <button class="btn-tag">games</button>
+      <button class="btn-tag">gaming</button>
       <button class="btn-tag">tv/movies</button>
     </div>
     <!--ARTICLE SECTION-->
     <div class="section" id="archive">
       <div class="content">
-        <div class="flex-group"></div>
+        <div class="flex-group media">
+        {%- for post in collections.blog -%}
+          <a class="blog" id="blog-{{ forloop.index }}" href="{{ post.url }}">
+              <div class="title">{{ post.data.title }}</div>
+              <div class="date">{{ post.data.date | date: "%B %d, %Y" }}</div>
+              <div class="summary">{{ post.data.description }}</div>
+              <div class="tags" >
+                {%- for tag in post.data.displayTags -%}
+                  <span class="tag">{{ tag }}</span>
+                {%- endfor -%}
+              </div>
+            </a>
+        {%- endfor -%}
+        </div>
         <div id="error">No results, sorry!</div>
       </div>
     </div>
-
-    <?php
-      }
-    ?>
     <!--FOOTER SECTION-->
     <footer class="section dark">
       <div class="content">
@@ -257,5 +224,6 @@
     <!--Page Specific-->
     <script src="../resources/js/media.js"></script>
     <script src="/resources/js/post.js"></script>
+    <script src="/shared/dock.js" data-leander-xyz-version="v1"></script>
   </body>
 </html>
