--- a/v1/blog/index.liquid
+++ b/v1/blog/index.liquid
@@ -224,6 +224,6 @@
     <!--Page Specific-->
     <script src="../resources/js/media.js"></script>
     <script src="/resources/js/post.js"></script>
-    <script src="/shared/dock.js" data-leander-xyz-version="v1"></script>
+    <script src="/shared/dock.js" data-leander-xyz-version="v1" defer></script>
   </body>
 </html>
