♻️ main pages with basic plaque

--- a/v1/_includes/pageTemplate.liquid
+++ b/v1/_includes/pageTemplate.liquid
@@ -173,6 +173,9 @@
       src="/shared/dock.js"
       data-leander-xyz-version="v1"
       defer></script>
-    <script src="/shared/plaques.js" defer></script>
+    <script
+      src="/shared/plaques.js"
+      data-sm-plaque-slug="{{ plaqueKey}}"
+      defer></script>
   </body>
 </html>
