--- a/v1/index.liquid
+++ b/v1/index.liquid
@@ -2,6 +2,7 @@
 layout: pageTemplate.liquid
 filename: home
 title: Welcome!
+plaqueKey: v1
 ---
 
 <!-- HOME SECTION -->
@@ -40,14 +41,14 @@ title: Welcome!
       </div>
       <!-- DESCRIPTION -->
       <p>
-        <code>Hello world</code>, my name is Leander Rodrigues and you've   
+        <code>Hello world</code>, my name is Leander Rodrigues and you've    
             stumbled upon my landing page! Take some time to peruse my work and
             stay a while. So a little bit about me, I'm currently enrolled at
             the
-        <em>University of Waterloo</em>, but I grew up in the suburbs of   
+        <em>University of Waterloo</em>, but I grew up in the suburbs of    
             Mississauga, Ontario. I was accepted into this newfangled program,
             made only for the coolest of cats:
-        <em>Nanotechnology Engineering</em>. It seemed like an obvious   
+        <em>Nanotechnology Engineering</em>. It seemed like an obvious    
             choice for someone like yours truly, since it sounds fancy, and I
             wanted to work with the latest and greatest in tech. As time goes by
             (I'm finishing up my second year!), it has definitely gone more
@@ -56,20 +57,20 @@ title: Welcome!
       </p>
       <br/>
       <p>
-        This site, and all its shiny buttons, animations, and links are a   
+        This site, and all its shiny buttons, animations, and links are a    
             testament to my efforts to
-        <em>break into the programmer scene</em>.   
+        <em>break into the programmer scene</em>.    
             My determination coupled with countless online resources has let me
             do some really cool stuff that I'd love for you (whoever you may be)
             to see (because it'll only grow my massive ego). While my education
             background is anything but
         <em>
-          traditional</em>, I choose to   
+          traditional</em>, I choose to    
             embrace that weirdness, and redirect it into my work.
       </p>
       <br/>
       <p>
-        On the lighter side, I'm a pretty cool guy (if I do say so myself)   
+        On the lighter side, I'm a pretty cool guy (if I do say so myself)    
             outside of work. In my down time, you'll pretty much always catch me
             with headphones on. I'm either listening to tunez (mandatory letter
             'z'), podcasts, or my friends scream at me in Discord. If you need
@@ -177,7 +178,7 @@ title: Welcome!
     <div class="card light round flex-item" id="curr-proj">
       <div class="subheading">Explore the MERN Tech Stack</div>
       <p class="text-small" id="curr-proj-summary">
-        So far, most of my web app projects are exclusively client-side   
+        So far, most of my web app projects are exclusively client-side    
             (HTML, CSS, JS), with help from some open-source libraries. If I
             plan on developing more robust, complicated, and fancy web apps, I
             want to try exploring the MERN tech stack:
@@ -185,7 +186,7 @@ title: Welcome!
         <b>Express</b>,
         <b>React.js</b>
         and
-        <b>Node.js</b>. This will be my   
+        <b>Node.js</b>. This will be my    
             first attempt with fullstack JavaScript, but from designing this
             site, I can already see the appeal in replacing PHP and MySQL.
             Regardless, I have a lot on my plate, but what's life without a big
@@ -197,7 +198,7 @@ title: Welcome!
       <div class="card light round flex-item">
         <div class="subheading">My Personal Blog</div>
         <p class="text-small" id="curr-blog-summary">
-          In my opinion, I think everyone should claim their personal little   
+          In my opinion, I think everyone should claim their personal little    
               corner of the internet. Sure, you can make some facebook posts,
               twitter updates, and snapchat stories that no one will remember,
               but what's the harm in being unique? I decided that if I wanted to
@@ -218,19 +219,19 @@ title: Welcome!
       <div class="card light round flex-item">
         <div class="subheading">My Online Notebook</div>
         <p class="text-small" id="curr-note-summary">
-          From my experience, watching tutorials or reading through someone   
+          From my experience, watching tutorials or reading through someone    
               else's code to try and learn something usually backfires. I sit
               there, watching a smart guy explain his smart thing, and my monkey
               brain thinks 'Oh, so it's THAT easy', before I stare blankly at a
               text-editor for an hour. Instead, I've decided to force myself to
           <em>really understand</em>
-          what I watch/read by writing some Notes   
+          what I watch/read by writing some Notes    
               (in Markdown). If I think something is difficult, or just
               critically important, I try to
           <em>
             make a note of it
           </em>
-          (hehe). There's not much in terms of   
+          (hehe). There's not much in terms of    
               broad topics right now, but I plan on writing some more in the
               near future. These notes are written casually and mainly directed
               towards beginners, but hey, I don't judge. The link below will
@@ -256,13 +257,13 @@ title: Welcome!
       <!-- CONTACT PREFACE -->
       <div class="text-small flex-item" id="visitor-info">
         <p class="indent">
-          If you'd like to get in touch, ask questions, or even just say   
+          If you'd like to get in touch, ask questions, or even just say    
               hello, please feel free to fill out the form and I'll be sure to
               reach out.
         </p>
         <br/>
         <p class="indent">
-          If you've noticed anything about the site or a project, which I   
+          If you've noticed anything about the site or a project, which I    
               could improve upon, please help me become a better programmer by
               forwarding that info along as well (tips, advice, recommendations,
               resources)!
@@ -271,7 +272,7 @@ title: Welcome!
         <h3>Are you hiring?</h3>
         <br/>
         <p class="indent">
-          In case you'd like to know a little more about me, check out my   
+          In case you'd like to know a little more about me, check out my    
               resume! It's a nice way to see all of my school/project experience
               and work history in one convenient place. As per your preference,
               I have both a direct PDF link and you can check out my hiring page
